@@ -1,3 +1,10 @@
+2023-11-02 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/gen.c,
+	  src/mcs51/main.c,
+	  support/regression/tests/bitintshift.c.in:
+	  Fix bug #3634.
+
 2023-11-02 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* Makefile.common.in,
